# load-image-bytes-with-rust-and-web-assembly-and-no-canvas-

./: .gitignore  Justfile  README.md
browser/: index.html  index.js
browser/pkg/: load_image_bytes_with_rust_and_web_assembly_and_no_canvas.d.ts  load_image_bytes_with_rust_and_web_assembly_and_no_canvas.js
nodejs/: node.js  package-lock.json  package.json
nodejs/pkg/: load_image_bytes_with_rust_and_web_assembly_and_no_canvas.d.ts  load_image_bytes_with_rust_and_web_assembly_and_no_canvas.js  load_image_bytes_with_rust_and_web_assembly_and_no_canvas_bg.js  load_image_bytes_with_rust_and_web_assembly_and_no_canvas_bg.wasm.d.ts
wasm-source/: Cargo.toml
wasm-source/src/: lib.rs  utils.rs
