[package]
name = "load-image-bytes-with-rust-and-web-assembly-and-no-canvas"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]


[dependencies]
console_error_panic_hook = "0.1.7"
image = "0.25.2"
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = {version = "0.3.70", features  =["console", "Window", "Blob", "ImageBitmapOptions","Response","ColorSpaceConversion", "ImageBitmap", "ImageData"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.43"


